syntax = "proto3";
package chain4energy.c4echain.cfevesting;

import "gogoproto/gogo.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfevesting/types";

message AccountVestingsList {
  
  repeated AccountVestings vestings = 1; 

}

message AccountVestings {
  
  string address = 1;
  string delegable_address = 2;
  repeated Vesting vestings = 3; 
}

message Vesting {

  int32 id = 1;
  string vesting_type = 2;
  int64 vesting_start = 3;
  int64 lock_end = 4;
  int64 vesting_end = 5;
  string vested = 6 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int64 release_period = 7;
  bool delegation_allowed = 8;
  string withdrawn = 9 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string sent = 10 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int64 last_modification = 11;
  string last_modification_vested = 12 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string last_modification_withdrawn = 13 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

}
