syntax = "proto3";
package chain4energy.c4echain.cfevesting;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cfevesting/params.proto";
import "cfevesting/vesting_types.proto";
import "cosmos/base/v1beta1/coin.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/chain4energy/c4e-chain/x/cfevesting/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/chain4energy/vesting/params";
  }
  // Queries a list of VestingType items.
	rpc VestingType(QueryVestingTypeRequest) returns (QueryVestingTypeResponse) {
		option (google.api.http).get = "/chain4energy/vesting/vesting_type";
	}

// Queries a list of Vesting items.
	rpc Vesting(QueryVestingRequest) returns (QueryVestingResponse) {
		option (google.api.http).get = "/chain4energy/vesting/vesting/{address}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryVestingTypeRequest {
}

message QueryVestingTypeResponse {

  VestingTypes vesting_types = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"vesting_types\""]; 
}

message QueryVestingRequest {
  string address = 1;
}

message QueryVestingResponse {
  string delegable_address = 1 [(gogoproto.moretags) = "yaml:\"delegable_address\""];
  repeated VestingInfo vestings = 2; 
}

message VestingInfo {
  int32 id = 1;
  string vesting_type = 2;
  int64 vesting_start_height = 3;
  int64 lock_end_height = 4;
  int64 vesting_end_height = 5;
  string withdrawable = 6;
  bool delegation_allowed = 7;
  cosmos.base.v1beta1.Coin vested = 8;
  string current_vested_amount = 9;
  string sent_amount = 10;

}

// this line is used by starport scaffolding # 3
